--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "@emailjs/browser": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
     "notistack": "^3.0.1",
@@ -24,9 +24,10 @@
     "react-icons": "^5.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
+    "sass": "^1.83.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
@@ -42,11 +43,7 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "rules": {
-      "no-unused-vars": "warn",
-      "react-hooks/exhaustive-deps": "warn"
-    }
+    ]
   },
   "browserslist": {
     "production": [
@@ -62,7 +59,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "node-sass": "^7.0.3",
     "sass-loader": "^13.2.2"
   }
 }
