--- a/uwr-api/package.json
+++ b/uwr-api/package.json
@@ -2,7 +2,7 @@
   "name": "uwr-api",
   "version": "1.0.0",
   "description": "API for UWR",
-  "main": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.5",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "nodemailer": "^6.9.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "puppeteer": "^23.2.0"
   }
 }
